<resources>
    <string name="app_name">Bad Budget?</string>
    <string name="cash_button_text">Cash</string>
    <string name="savings_button_text">Savings</string>
    <string name="debts_button_text">Debts</string>
    <string name="gains_button_text">Gains</string>
    <string name="losses_button_text">Losses</string>
    <string name="budget_button_text">Budget</string>
    <string name="track_button_text">Track</string>
    <string name="predict_button_text">Predict</string>
    <string name="summary_button_text">Summary</string>
    <string name="transfers_button_text">Transfers</string>
    <string name="cash_activity_title">Cash Accounts</string>
    <string name="cash_table_account">Account</string>
    <string name="cash_table_amount">Value</string>
    <string name="cash_table_savings">Savings?</string>
    <string name="cash_table_quicklook">Quicklook?</string>
    <string name="add_account_text">Add Account</string>
    <string name="add_account_activity_title">Add Account</string>
    <string name="account_name_prompt">Account Name?</string>
    <string name="current_value_prompt">Current Value?</string>
    <string name="savings_account_prompt">Setup as Savings Account?</string>
    <string name="input_account_name_hint">Account name/description...</string>
    <string name="input_account_amount_hint">Current value...</string>
    <string name="input_account_quicklook">Quicklook?</string>
    <string name="confirm_add_string">Submit</string>
    <string name="cancel_add_string">Cancel</string>
    <string name="add_account_edit_title">Edit Account</string>
    <string name="delete_add_edit_string">Delete</string>
    <string name="account_delete_error_base">"Cannot Delete This Account:"</string>
    <string name="account_delete_error_savings_contribution_source">Contribution source for</string>
    <string name="account_delete_error_debts_payment_source">Payment source for</string>
    <string name="account_delete_error_gains_destination">Destination for</string>
    <string name="account_delete_error_losses_source">Source for</string>
    <string name="account_delete_error_budget_source">Source for Budget</string>
    <string name="add_savings_activity_title">Add Savings Account</string>
    <string name="add_savings_account_name_prompt">Account Name</string>
    <string name="add_savings_account_name_hint">Account Name/Description...</string>
    <string name="add_savings_current_value_prompt">Current Value</string>
    <string name="add_savings_current_value_hint">Current Value...</string>
    <string name="add_savings_interest_rate_prompt">Interest Rate</string>
    <string name="add_savings_interest_rate_hint">Interest Rate...</string>
    <string name="add_savings_quicklook_prompt">Quicklook</string>
    <string name="add_savings_goal_prompt"><u>Goal</u></string>
    <string name="add_savings_set_goal_prompt">Set Goal</string>
    <string name="add_savings_goal_amount_prompt">Goal Amount</string>
    <string name="add_savings_goal_amount_hint">Goal Amount Not Set...</string>
    <string name="add_savings_goal_date_prompt">Goal Date</string>
    <string name="add_savings_goal_date_hint">Goal Date Not Set...</string>
    <string name="add_savings_contribution_prompt"><u>Contribution</u></string>
    <string name="add_savings_contribution_amount_prompt">Contribution Amount</string>
    <string name="add_savings_contribution_amount_hint">Contribution Amount...</string>
    <string name="add_savings_contribution_frequency_prompt">Contribution Frequency</string>
    <string name="add_savings_contribution_frequency_hint">Monthly (Default)</string>
    <string name="add_savings_source_account_prompt">Source Account</string>
    <string name="add_savings_source_account_hint">Choose Source...</string>
    <string name="add_savings_next_date_prompt">Next Contribution</string>
    <string name="add_savings_next_date_hint">Set...</string>
    <string name="add_savings_end_date_prompt">End Date</string>
    <string name="add_savings_end_date_hint">Set...</string>
    <string name="add_savings_end_date_ongoing">Ongoing</string>
    <string name="add_savings_end_date_disabled">Will End on Goal Date</string>
    <string name="add_savings_clean_button">Clean</string>
    <string name="add_savings_submit_button">Submit</string>
    <string name="add_savings_cancel_button">Cancel</string>
    <string-array name="add_savings_frequency_array">
        <item>@string/one_time</item>
        <item>@string/daily</item>
        <item>@string/weekly</item>
        <item>@string/bi_weekly</item>
        <item>@string/monthly</item>
        <item>@string/yearly</item>
    </string-array>
    <string name="add_savings_data_clean_message">Data is Clean!</string>
    <string name="add_savings_clean_missing_input">To Clean Please Enter: the current value, an interest rate, a contribution amount, and a start Date.\nAdditionally Enter 2 of 3: goal amount, goal date, and/or contribution amount.</string>
    <string name="add_savings_clean_auto_set_goal_amount">Goal Amount Set: </string>
    <string name="add_savings_clean_auto_set_goal_date">Goal Date Set: </string>
    <string name="add_savings_clean_auto_set_contribution_amount">Contribution Amount Set: </string>
    <string name="add_savings_submit_missing">Missing:</string>
    <string name="add_savings_submit_missing_goal">Missing Goal:</string>
    <string name="add_savings_submit_data_dirty">Data Should Be Cleaned</string>
    <string name="add_savings_duplicate_account_name">Duplicate Account Name</string>
    <string name="add_savings_edit_title">Edit Account</string>
    <string name="clean_fragment_title">Clean...</string>
    <string name="clean_fragment_update">Clean</string>
    <string name="clean_fragment_cancel">Cancel</string>
    <string name="clean_fragment_goal_amount">Goal Amount:</string>
    <string name="clean_fragment_goal_date">Goal Date:</string>
    <string name="clean_fragment_contribution_amount">Contribution Amount:</string>
    <string name="savings_activity_title">Savings Accounts</string>
    <string name="savings_table_account">Account</string>
    <string name="savings_table_amount">Value</string>
    <string name="savings_table_contribution">Contribution</string>
    <string name="savings_table_goal">Goal</string>
    <string name="savings_table_quicklook">Quicklook?</string>
    <string name="savings_table_not_applicable">N/A</string>
    <string name="add_savings_account_text">Add Savings Account</string>
    <string name="popup_quicklook_title_suffix"> - Quicklook</string>
    <string name="popup_quicklook_detailed_look">Detailed Look</string>
    <string name="popup_quicklook_date_placeholder">Date</string>
    <string name="popup_quicklook_net_cash">Net Cash</string>
    <string name="popup_quicklook_net_debt">Net Debt</string>
    <string name="popup_quicklook_net_worth">Net Worth</string>
    <string name="one_time">One-Time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="bi_weekly">Bi-Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="predict_activity_title">Predict</string>
    <string name="predict_year_prompt">Year</string>
    <string name="debts_activity_title">Debts</string>
    <string name="debts_credit_cards">Credit Cards</string>
    <string name="debts_loans">Loans</string>
    <string name="debts_miscellaneous">Miscellaneous</string>
    <string name="debt_no_payment">N/A</string>
    <string name="dollar_sign">$</string>
    <string name="payoff_shorthand">PO</string>
    <string name="credit_cards_activity_title">Credit Cards</string>
    <string name="credit_cards_column_1">Name</string>
    <string name="credit_cards_column_2">Debt</string>
    <string name="credit_cards_column_3">Payment</string>
    <string name="credit_cards_column_4">Quicklook?</string>
    <string name="detailed_look_credit_cards_alt_column_4">Type</string>
    <string name="detailed_look_credit_cards_alt_column_3">Interest</string>
    <string name="credit_cards_add">Add Credit Card</string>
    <string name="loans_activity_title">Loans</string>
    <string name="loans_column_1">Name</string>
    <string name="loans_column_2">Debt</string>
    <string name="loans_column_3">Payment</string>
    <string name="loans_column_4">Quicklook?</string>
    <string name="loans_add">Add Loan</string>
    <string name="misc_activity_title">Miscellaneous Debts</string>
    <string name="misc_column_1">Name</string>
    <string name="misc_column_2">Debt</string>
    <string name="misc_column_3">Payment</string>
    <string name="misc_column_4">Quicklook?</string>
    <string name="misc_add">Add Miscellaneous Debt</string>
    <string name="add_cc_title">Add Credit Card</string>
    <string name="add_cc_card_name">Card Name</string>
    <string name="add_cc_card_name_hint">Credit Card Name...</string>
    <string name="add_cc_current_debt">Current Debt</string>
    <string name="add_cc_current_debt_hint">Current Debt...</string>
    <string name="add_cc_quicklook_prompt">Quicklook?</string>
    <string name="add_cc_setup_payment_prompt">Setup Payment?</string>
    <string name="add_loan_name">Loan Name</string>
    <string name="add_loan_name_hint">Loan Name/Description...</string>
    <string name="add_loan_current_debt">Current Debt</string>
    <string name="add_loan_current_debt_hint">Current Debt...</string>
    <string name="add_loan_quicklook_prompt">Quicklook?</string>
    <string name="add_loan_setup_payment_prompt">Setup Payment?</string>
    <string name="add_loan_submit">Submit</string>
    <string name="add_loan_cancel">Cancel</string>
    <string name="add_loan_interest_rate">Interest Rate</string>
    <string name="add_loan_interest_rate_hint">Interest Rate...</string>
    <string name="add_loan_simple_interest">Simple Interest</string>
    <string name="add_loan_simple_interest_principal">Principal</string>
    <string name="add_loan_simple_interest_not_applicable">N/A</string>
    <string name="nav_drawer_tracker">Tracker</string>
    <string name="nav_drawer_history">History</string>
    <string name="nav_drawer_predict">Predict</string>
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_budget_settings">Settings</string>
    <string name="nav_drawer_delete_budget">Delete</string>
    <string name="toolbar_predict_date_picker">Date Picker</string>
    <string name="toolbar_budget_select_title">Budget Select</string>
    <string name="toolbar_tracker_title">Tracker</string>
    <string name="custom_calendar_placeholder_date">current date</string>
    <string name="custom_calendar_monday">Mon</string>
    <string name="custom_calendar_tuesday">Tue</string>
    <string name="custom_calendar_wednesday">Wed</string>
    <string name="custom_calendar_thursday">Thu</string>
    <string name="custom_calendar_friday">Fri</string>
    <string name="custom_calendar_saturday">Sat</string>
    <string name="custom_calendar_sunday">Sun</string>
    <string name="track_calc_pos0">C</string>
    <string name="track_calc_pos1">7</string>
    <string name="track_calc_pos2">8</string>
    <string name="track_calc_pos3">9</string>
    <string name="track_calc_pos4">4</string>
    <string name="track_calc_pos5">5</string>
    <string name="track_calc_pos6">6</string>
    <string name="track_calc_pos7">1</string>
    <string name="track_calc_pos8">2</string>
    <string name="track_calc_pos9">3</string>
    <string name="track_calc_pos10">.</string>
    <string name="track_calc_pos11">0</string>
    <string name="track_calc_pos12">+</string>
    <string name="track_calc_pos13">-</string>
    <string name="track_calc_description">Description (Optional)</string>
    <string name="track_calc_bot_pos0">CAN</string>
    <string name="track_calc_bot_pos1">RES</string>
    <string name="track_calc_bot_pos2">OK</string>
</resources>